Fixed top spacing of article

--- a/css/index.css
+++ b/css/index.css
@@ -412,7 +412,8 @@ header {
 
 article {
   min-height: 100vh;
-  margin-bottom: 10rem; }
+  margin-bottom: 10rem;
+  padding-top: 1.5rem; }
 
 .article-container {
   display: flex;
